<resources>
    <string name="app_name">Nutrizone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_registration">Registration</string>
    <string name="name">Name</string>
    <string name="register_me">Register Me !</string>
    <string name="e_mail">E-mail</string>
    <string name="your_profile">Your Profile</string>
    <string name="avatar">Avatar</string>
    <string name="calorie_meter">Calorie Meter</string>
    <string name="add_intake">Add Intake</string>
    <string name="water_intake">Water Intake</string>
    <string name="previous_items">Previous Items</string>
    <string name="scan_a_new_item">Scan A new Item</string>
    <string name="profile">profile</string>
    <string name="gender">Gender</string>
    <string name="log_out">Log Out</string>
    <string name="cups_of_water">Cups Of Water:</string>
    <string name="enter_manually">Enter Manually</string>
</resources>